# kusto-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/: index.html
src/mcp_server_kusto/: __init__.py  auth.py  server.py
tests/: test_auth.py  test_kql_spec_coverage.py  test_server.py
